styling for inactive choices

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,14 +28,19 @@ a {
   padding: 0 0 0 1%;
 }
 
-.choice {
+.activeChoice {
   padding: 1%;
+  border: 1px solid black;
+}
+
+.inActiveChoice {
+  padding: 1%;
+  color: green;
   border: 1px solid black;
 }
 
 .textLine {
   min-height: 16px;
-  /* border: 1px solid chartreuse; */
 }
 
 .lastLine {
