--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@
 
 html,
 body {
-  padding: 7%;
+  padding: 4%;
   margin: 0;
   font-family: "Classic Console", monospace;
   background-color: black;
@@ -57,6 +57,7 @@ a {
 
 .landingArt {
   max-width: 60%;
+  margin: 6% 0 0 13%;
 }
 
 .versionNumber {
