--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,6 +28,12 @@ a {
   padding: 0 0 0 1%;
 }
 
+.hidden {
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s 2s, opacity 2s linear;
+}
+
 .invisible {
   display: none;
 }
